# block-rearrangement

./: .gitignore  .gitmodules  DOCUMENTATION.md  README.md
doc/: PDDL Goals For Scenes.md
src/grasping_moveit/: CMakeLists.txt  package.xml
src/grasping_moveit/config/: config.yaml  home_pose.yaml
src/grasping_moveit/include/grasping_moveit/: moveit_utils.hpp  mtc_actions.hpp  task_parameters.hpp
src/grasping_moveit/launch/: move_to_home_client.launch.py
src/grasping_moveit/src/: move_to_home_client.cpp  move_to_pose_server.cpp  mtc_action_server.cpp  mtc_actions.cpp
src/grasping_moveit/src/utils/: moveit_utils.cpp
src/gripper/: README.md  package.xml  setup.cfg  setup.py
src/gripper/config/: gripper_config.yaml
src/gripper/gripper/: __init__.py  gripper_action_server.py  joint_state_merger.py
src/gripper/gripper/utils/: __init__.py  config_loader.py  gripper_controller.py  joint_state_utils.py
src/gripper/launch/: gripper.launch.py
src/grounding/: CMakeLists.txt  package.xml
src/grounding/config/: config.yaml
src/grounding/include/grounding/: object_registry.hpp  predicates_grounder.hpp
src/grounding/launch/: grounding.launch.py
src/grounding/src/: grounding_node.cpp  object_registry.cpp  predicates_grounder.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Detection.msg  DetectionArray.msg
src/interfaces/srv/: AdjustObjects.srv  ClearObjects.srv  GetAction.srv  GetGrounding.srv  GetPlacement.srv  GetSegmentation.srv  MoveToPose.srv  PickUp.srv  Place.srv  ProjectTo3D.srv
src/pick_place_generator/: CMakeLists.txt  package.xml
src/pick_place_generator/include/pick_place_generator/: cube.hpp  object.hpp  place_utils.hpp  surface.hpp  table.hpp
src/pick_place_generator/src/: cube.cpp  place_utils.cpp  surface.cpp  table.cpp
src/placing/: package.xml  setup.cfg  setup.py
src/placing/placing/: placement_client.py  placement_server.py
src/placing/placing/utils/: README.md  clustering.py  depth_processing.py  object_utils.py  placement.py
src/segmentation/: README.md  package.xml  requirement.txt  setup.cfg  setup.py
src/segmentation/segmentation/: segmentation_server.py  trigger_segmentation.py
src/segmentation/segmentation/utils/: detect.py  processing.py
src/sequencer/: README.md  package.xml  setup.cfg  setup.py
src/sequencer/launch/: pick_system.launch.py
src/sequencer/sequencer/: pick_all_sequencer.py  pick_and_place_hc.py  pick_and_place_nhc.py  pick_sequencer.py  smach_viewer.py
src/sequencer/sequencer/states/: __init__.py  detect_state.py  home_state.py  pick_state.py  place_state.py  project_state.py
src/spawn_objects/: CMakeLists.txt  notes.md  package.xml
src/spawn_objects/config/: config.yaml
src/spawn_objects/include/spawn_objects/: spawn_objects.hpp
src/spawn_objects/launch/: spawn_objects_server.launch.py
src/spawn_objects/src/: clear_objects_client.cpp  spawn_objects.cpp  spawn_objects_server.cpp
src/task_planner/: package.xml  setup.cfg  setup.py
src/task_planner/config/: config.yaml
src/task_planner/task_planner/: __init__.py  action_executor.py  task_planning_server.py
src/task_planner/task_planner/actions/: __init__.py  base_action.py  pick_up_action.py  put_down_action.py  stack_action.py  unstack_action.py
src/task_planner/task_planner/utils/: __init__.py  tamp_interface.py
src/world_coords/: README.md  package.xml  setup.cfg  setup.py
src/world_coords/config/: calibration_result.json
src/world_coords/world_coords/: world_coords_server.py
