<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasping_moveit</name>
  <version>0.0.1</version>
  <description>MoveIt-based grasping package</description>
  <maintainer email="inkredible2599@gmail.com">Niranjan Kumar Ilampooranan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_task_constructor_core</build_depend>
  <build_depend>moveit_task_constructor_msgs</build_depend>
  <build_depend>interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>pick_place_generator</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>ament_index_cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_task_constructor_core</exec_depend>
  <exec_depend>moveit_task_constructor_msgs</exec_depend>
  <exec_depend>interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>pick_place_generator</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

